--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ serde = { version = "1.0", features = ["derive"] }
 reqwest = { version = "0.12", features = ["json"] }
 tokio = { version = "1.0", features = ["full"] }
 dotenv = "0.15.0"
+arrow = "51.0"
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["full"] }
