--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ reqwest = { version = "0.12", features = ["json"] }
 tokio = { version = "1.0", features = ["full"] }
 dotenv = "0.15.0"
 arrow = "51.0"
+influxdb = { version = "0.7.2", features = ["derive"] }
+chrono = "0.4"
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["full"] }
